[package]
name = "cart"
version = "0.0.1"
authors = ["Tyler Neely <t@jujit.su>", "Katharina Fey <kookie@spacekookie.de>"]
description = "concurrent adaptive radix tree"
license = "MIT/Apache-2.0"
homepage = "https://github.com/berlinrs/cart-rs"
repository = "https://github.com/berlinrs/cart-rs"
keywords = ["concurrent", "lock-free", "datastructure"]
documentation = "https://docs.rs/cart/"

[features]
default = []
lock_free_delays = ["rand"]

[dependencies]
rand = {version = "0.4", optional = true}
crossbeam-epoch = "0.4"

[dev-dependencies]
quickcheck = "0.6"
rand = "0.4"
